# archman

./: Cargo.toml  LICENSE  README.md  TODO  default.nix  flake.nix
src/: args.rs  completions.rs  config.rs  lib.rs  link.rs  main.rs  packages.rs  pacman.rs  pkg.rs  service.rs  show.rs  sync.rs  util.rs
src/pacman/: query.rs
