[package]
name = "archman"
version = "0.0.0"
authors = ["Bartosz Wojno <bartoszwjn@gmail.com>"]
edition = "2021"
description = "Trying to declaratively configure Arch Linux"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.70"
atty = "0.2.14"
gethostname = "0.4.1"
regex = "1.7.2"
serde = { version = "1.0.158", features = ["derive"] }
structopt = "0.3.26"
thiserror = "1.0.40"
toml = "0.7.3"
