[package]
name = "archman"
version = "0.0.0"
authors = ["Bartosz Wojno <bartoszwjn@gmail.com>"]
edition = "2021"
description = "Trying to declaratively configure Arch Linux"
rust-version = "1.67.1"
repository = "https://github.com/bartoszwjn/archman"
license = "MIT"
publish = false

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.70"
atty = "0.2.14"
clap = { version = "4.1.11", features = ["cargo", "derive"] }
clap_complete = "4.1.5"
gethostname = "0.4.1"
regex = "1.7.2"
serde = { version = "1.0.158", features = ["derive"] }
thiserror = "1.0.40"
toml = "0.7.3"
