[package]
name = "archman"
version = "0.0.0"
authors = ["Bartosz Wojno <bartoszwjn@gmail.com>"]
edition = "2021"
description = "Trying to declaratively configure Arch Linux"
rust-version = "1.67.1"
repository = "https://github.com/bartoszwjn/archman"
license = "MIT"
publish = false

[dependencies]
anstyle = "0.3.5"
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["cargo", "derive"] }
clap_complete = "4.1.5"
gethostname = "0.4.1"
is-terminal = "0.4.5"
regex = "1.7.2"
serde = { version = "1.0.158", features = ["derive"] }
thiserror = "1.0.40"
toml = "0.7.3"
